# lala-store

./: .gitignore  .gitmodules  ADD_PRODUCTS_INSTRUCTIONS.md  BACKEND_AND_DATABASE.md  BACKEND_SETUP_GUIDE.md  BUG_REFERENCE.md  BUILD_BACKEND.md  CONNECTION_TEST_REPORT.md  CONNECTION_TEST_RESULTS.md  FINAL_STATUS_REPORT.md  FRONTEND_STATUS.md  INSTALLATION_COMPLETE.md  PROJECT_RUNNING.md  QUICK_START.md  README.md  SERVERS_RUNNING.md  SERVICES_STATUS.md  SETUP.md  SETUP_STATUS.md  SETUP_SUMMARY.md  STARTED_SUCCESSFULLY.md  STRIPE_SETUP.md  TEST_MEN_PRODUCTS.md  VERIFY_SETUP.md  VULNERABILITIES.md  add_mens_products.ps1  ensure_database_setup.sql  fix_cart_database.ps1  fix_cart_issue.md  package-lock.json  package.json  setup_database.sh  setup_macos.sh  setup_windows.bat  start_backend.bat  start_backend.sh  start_backend_mingw.bat  start_frontend.bat  start_frontend.sh  test_connection.bat  (+3 more)
backend/: CMakeLists.txt  build.sh  build_mingw.ps1  main.cpp
backend/config/: db_config.json  stripe_config.json
backend/db/: connection.cpp  connection.h
backend/models/: Cart.h  Category.h  Order.h  Product.h  User.h
backend/routes/: cart_routes.cpp  cart_routes.h  home_routes.cpp  home_routes.h  order_routes.cpp  order_routes.h  product_routes.cpp  product_routes.h  stripe_routes.cpp  stripe_routes.h
backend/utils/: cors_helper.h  response_helper.cpp  response_helper.h  stripe_client.cpp  stripe_client.h  vulnerable_helper.cpp  vulnerable_helper.h
database/: NO_PRODUCTS_FIX.md  add_mens_products.sql  add_stripe_columns.sql  ensure_men_products.sql  fix_cart_schema.sql  fix_orders_schema.sql  migration_sizes.sql  schema.sql  schema_sqlite.sql  seed_extra_products.sql  seed_men_products.sql  seed_mens_new_products.sql  seed_products_always.sql  visa_pci_orders_migration.sql
docs/: VISA_PCI_STANDARDS.md
frontend/: package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.jsx
frontend/src/api/: api.js
frontend/src/components/: CardPaymentForm.css  CardPaymentForm.jsx  CartItem.css  CartItem.jsx  Footer.jsx  Navbar.css  Navbar.jsx  ProductCard.jsx  Toast.css  Toast.jsx
frontend/src/context/: CartContext.jsx
frontend/src/data/: fallbackProducts.js
frontend/src/pages/: Cart.css  Cart.jsx  Checkout.css  Checkout.jsx  Home.css  Home.jsx  Men.css  Men.jsx  ProductDetails.css  ProductDetails.jsx  Women.css  Women.jsx
scripts/: ensure_database.js  ensure_sqlite_db.js  seed_men_products.js  test_backend_integration.js  test_backend_process.js  test_men_products_api.js  verify_backend_and_db.ps1
